upd perm to priority sbtks
